@@ -130,7 +130,9 @@ enum EailActionSupported
     EAIL_ACTION_SUPPORTED_NONE = 1 << 0,
     EAIL_ACTION_SUPPORTED_CLICK = 1 << 1,
     EAIL_ACTION_SUPPORTED_PRESS = 1 << 2,
-    EAIL_ACTION_SUPPORTED_RELEASE = 1 << 3
+    EAIL_ACTION_SUPPORTED_RELEASE = 1 << 3,
+    EAIL_ACTION_SUPPORTED_EXPAND = 1 << 4,
+    EAIL_ACTION_SUPPORTED_SHRINK = 1 << 5
 };
 
 
